--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "inani/larapoll",
+    "name": "temian/laravelpoll",
     "description": "A Laravel package to create polls",
     "keywords": ["polls", "votes", "laravel", "php"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Inani El Houssain",
-            "email": "inanielhoussain@gmail.com"
+            "name": "Adeala Ademola",
+            "email": "kikismedia@gmail.com"
         }
     ],
     "minimum-stability": "stable",
@@ -16,7 +16,7 @@
       }
     },
     "require": {
-      "illuminate/support": "~5|~6|~7|~8"
+      "illuminate/support": "~5|~6|~7|~8|~9|~10"
     },
     "require-dev": {
       "fzaninotto/faker": "~1.4",
